2010-05-14  Dawit Alemayehu  <adawit@kde.org>

        Reviewed by Simon Hausmann.

        Implemented createJavaAppletWidget to activate Java applet support.

        https://bugs.webkit.org/show_bug.cgi?id=33044

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createJavaAppletWidget):

2010-05-13  Simon Hausmann  <hausmann@webkit.org>

        Symbian build fix.

        [Qt] Updated the def file with new exports.

        * symbian/eabi/QtWebKitu.def: Add missing gc symbol for QtLauncher

2010-05-13  Simon Hausmann  <simon.hausmann@nokia.com>

        Symbian build fix.

        [Qt] Updated the def file with new exports.

        * symbian/eabi/QtWebKitu.def:

2010-05-11  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] tst_QWebPage::inputMethods failing on Maemo5
        https://bugs.webkit.org/show_bug.cgi?id=38685

        Check if the SIP (Software Input Panel) is triggered, which normally
        happens on mobile platforms, when a user input form receives a mouse click.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

2010-05-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Laszlo Gombos.

        [Qt] REGRESSION(r58497) tst_QGraphicsWebView::crashOnViewlessWebPages() is failing
        https://bugs.webkit.org/show_bug.cgi?id=38655

        Fix double free by moving the connect till after the resize.

        The bug is causes by the fact that a resize of an empty page causes a
        layout, thus deleting the qgraphicswebview before setHtml is called,
        which then deletes it again, causing a double free.

        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::crashOnViewlessWebPages):

2010-05-12  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Laszlo Gombos.
