@@ -1,3 +1,15 @@
+2010-05-14  Benjamin Poulain  <benjamin.poulain@nokia.com>
+
+        Reviewed by Laszlo Gombos.
+
+        [QT] Update the Symbian version for the user agent
+        https://bugs.webkit.org/show_bug.cgi?id=38389
+
+        Update the user agent for Symbian^2 to Symbian^4
+
+        * Api/qwebpage.cpp:
+        (QWebPage::userAgentForUrl):
+
 2010-05-14  Dawit Alemayehu  <adawit@kde.org>
 
         Reviewed by Simon Hausmann.
